[package]
name = "superpoll"
version = "0.1.0"
authors = ["Daogang Tang <daogangtang@gmail.com>", "Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
superpoll-io = {path = "../superpoll-io"}
superpoll-blocking = {path = "../superpoll-blocking"}
superpoll-net = {path = "../superpoll-net"}
superpoll-fs = {path = "../superpoll-fs"}
superpoll-process = {path = "../superpoll-process"}
