[package]
name = "superpoll"
version = "0.1.0"
authors = ["Daogang Tang <daogangtang@gmail.com>", "Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
superpoll-io = {git = "https://github.com/daogangtang/superpoll-io"}
superpoll-blocking = {git = "https://github.com/daogangtang/superpoll-blocking"}
superpoll-net = {git = "https://github.com/daogangtang/superpoll-net"}
superpoll-fs = {git = "https://github.com/daogangtang/superpoll-fs"}
superpoll-process = {git = "https://github.com/daogangtang/superpoll-process"}
