[package]
name = "superpoll-io"
version = "0.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>", "Daogang Tang <daogangtang@gmail.com>"]
edition = "2018"
description = "Async I/O and timers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/daogangtang/superpoll-io"
homepage = "https://github.com/daogangtang/superpoll-io"
documentation = ""
keywords = ["mio", "epoll", "kqueue", "iocp", "wepoll"]
categories = ["asynchronous", "network-programming", "os"]
readme = "README.md"

[dependencies]
concurrent-queue = "1.2.2"
fastrand = "1.3.5"
futures = "0.3.8"
log = "0.4.11"
nb-connect = "1.0.0"
once_cell = "1.4.1"
parking = "2.0.0"
polling = "2.0.0"
vec-arena = "1.0.0"
waker-fn = "1.1.0"

[target."cfg(unix)".dependencies]
libc = "0.2.77"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winsock2"] }

[dev-dependencies]
superpoll-net = {git = "https://github.com/daogangtang/superpoll-net"}
superpoll-blocking = {git = "https://github.com/daogangtang/superpoll-blocking"}
signal-hook = "0.1.16"
tempfile = "3.1.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
inotify = { version = "0.8.3", default-features = false }
nix = "0.18.0"
timerfd = "1.1.1"

[target.'cfg(windows)'.dev-dependencies]
uds_windows = "0.1.5"
